[package]
name = "gitsafe"
version = "0.1.0"
edition = "2021"
description = "Local untracked-file safety net for git"
license = "MIT"
repository = "https://github.com/nhangen/llm-tools"

[[bin]]
name = "gitsafe"
path = "src/main.rs"

[lib]
name = "gitsafe"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.5"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
